--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
                         <div class="container">
                             <h4>Rute has a museum of sugar with many figures made with sugar for real person</h4>
-                            <a class="enlace" href="https://turismodelasubbetica.es/rute/item/museo-del-azucar" target="_blank">Leer mas</a>
+                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/museo-del-azucar" target="_blank">Leer mas</a>
                         </div>
 
                     </div>
@@ -163,7 +163,7 @@
 
                         <div class="container">
                             <h4><b>History</b></h4>
-                            <a class="enlace" href="https://turismodelasubbetica.es/rute/item/museo-artesanal-del-turron-mantecado-y-mazapan" target="_blank">Leer mas</a>
+                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/museo-artesanal-del-turron-mantecado-y-mazapan" target="_blank">Leer mas</a>
                         </div>
 
                     </div>
@@ -175,7 +175,7 @@
 
                         <div class="container">
                             <h4><b>History</b></h4>
-                            <a class="enlace" href="https://turismodelasubbetica.es/rute/item/casa-museo-del-jamon" target="_blank">Leer mas</a>
+                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/casa-museo-del-jamon" target="_blank">Leer mas</a>
                         </div>
 
                     </div>
@@ -187,7 +187,7 @@
 
                         <div class="container">
                             <h4><b>History</b></h4>
-                            <a class="enlace" href="https://turismodelasubbetica.es/rute/item/museo-del-anis" target="_blank">Leer mas</a>
+                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/museo-del-anis" target="_blank">Leer mas</a>
                         </div>
 
                     </div>
