cambio de colores

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         
         <section id="nature">
 
-            <div class="titulo-seccion">
+            <div class="titulo-seccion2">
                 Nature
             </div>
 
@@ -202,7 +202,7 @@
 
         <section id="history">
 
-            <div class="titulo-seccion">
+            <div class="titulo-seccion2">
                 History
             </div>
 
