correcion de responsividad

--- a/index.html
+++ b/index.html
@@ -202,18 +202,18 @@
 
         <section id="history">
 
-            <div class="titulo-seccion2">
+            <div class="titulo-seccion21">
                 History
             </div>
 
-            <div class="grid2">
+            <div class="grid24">
 
-                <div class="col2">
+                <div class="col22">
 
                     <div class="container1"> <iframe class="responsive-iframe" src="https://www.youtube.com/embed/QCh3_BG4uuc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
                     </div>
                 </div>
-                <div class="col2">
+                <div class="col23">
                     <p>His time at Rute served the component of the Generation of '27 to continue increasing his literary work. It was here that he wrote his second book. 'The dawn of the wallflower', where it precisely reflects the Andalusian landscape with its olive trees, shepherds and whitewashed villages. In Rute, the author was able to get in touch "with the rude, imposing and unique nature of the Cordoba mountains and get to know first-hand the tragedies, beliefs and human miseries that were enclosed in a backward, miserable and often sordid Andalusia, dominated by a few rich, owners of land, plants and animals and also of men who worked from sunrise to sunset for a miserable salary".</p>
 
                 </div>
@@ -233,8 +233,8 @@
                 <div class="columna">
 
                     <ul>
-                        <li>Telefono: 957 532 500</li>
-                        <li>Correo electronico: ayuntamiento@rute.es</li>
+                        <li>Phone: 957 532 500</li>
+                        <li>Email: ayuntamiento@rute.es</li>
                         <li>Web: <a class="enlace1" href="https://rute.es/" target="_blank">ayuntamiento@rute.es</a></li>
                     </ul>
 
@@ -245,15 +245,15 @@
                         <div class="row">
                                 <div class="column c1">
                                     <img src="./images/alcalde.jpg">
-                                    <p>Antonio Ruiz, <br> Alcalde</p>
+                                    <p>Antonio Ruiz, <br> Mayor</p>
                                     <img src="./images/AntonioGranados.jpg">
-                                    <p>Concejal de <br> Festejos</p>
+                                    <p>Councilor de <br> Festejos</p>
                                 </div>
                                 <div class="column">
                                     <img src="./images/davidRuiz.jpg">
-                                    <p>Concejal de <br> RRHH</p>
+                                    <p>Councilor de <br> RRHH</p>
                                     <img src="./images/franciscoJavier.jpg">
-                                    <p>Concejal de <br> Turismo</p>
+                                    <p>Councilor de <br> Turismo</p>
 
                                 </div>
                                
