--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
 
             <div class="topnav" id="myTopnav">
-                <a href="#hero" class="active">Inicio</a>
+                <a href="#hero" class="active">Home</a>
                 <a href="#general">About</a>
                 <a href="#turist">Turist</a>
                 <a href="#history">History</a>
@@ -258,7 +258,7 @@
                     <img src="./images/bandera.png" alt="">
                 </div>
                 <div class="col3">
-                    <a class="enlace" href="#hero">Inicio</a> <br>
+                    <a class="enlace" href="#hero">Home</a> <br>
                     <a class="enlace" href="#general">About</a> <br>
                     <a class="enlace" href="#turist">Turist</a> <br>
                     <a class="enlace" href="#history">History</a> <br>
