trducion de contacto

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#turist">Turist</a>
                 <a href="#history">History</a>
                 <a href="#nature">Nature</a>
-                <a href="#contacto">Contacto</a>
+                <a href="#contacto">Contact</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars"></i>
                 </a>
@@ -263,7 +263,7 @@
                     <a class="enlace" href="#turist">Turist</a> <br>
                     <a class="enlace" href="#history">History</a> <br>
                     <a class="enlace" href="#nature">Nature </a><br>
-                    <a class="enlace" href="#contacto">Contacto </a><br>
+                    <a class="enlace" href="#contacto">Contact </a><br>
                 </div>
                 <div class="col3"> 
                     
