retoques del video de yt

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                     From the faunal point of view, there is a great variety of interesting species, such as populations of birds of prey: eagle owl, kestrel, Bonelli's eagle, buzzard, goshawk, hawk, little owl, owls, highlighting the peregrine falcon, symbol of the Sierras Subbéticas Natural Park and the Griffon Vulture. Among the mammals, we can highlight the wild boar, badgers, hares and rabbits, ferrets, genets and foxes, as well as some mountain goats.
 
-                     <p class="centrado">To know more, visit this<a class="enlace2" href="https://turismodelasubbetica.es/rute/item/sierra-de-rute" target="_blank">blog</a> </p>
+                     <p class="centrado">To know more, visit this<a class="enlace2" href="https://turismodelasubbetica.es/rute/item/sierra-de-rute" target="_blank"> blog</a> </p>
 
                 </div>
 
@@ -136,7 +136,7 @@
 
                         <div class="container">
                             <h4>A different concept of Museum, to which La Flor de Rute has applied the same zeal with which it produces its accredited Christmas Sweets.</h4>
-                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/museo-del-azucar" target="_blank">Leer mas</a>
+                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/museo-del-azucar" target="_blank">Show more</a>
                         </div>
 
                     </div>
@@ -148,7 +148,7 @@
 
                         <div class="container">
                             <h4>The Museo Artesanal del Turron, Mantecado y Mazapan exposes the manufacturing processes of yesteryear and the necessary tools for it.</h4>
-                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/museo-artesanal-del-turron-mantecado-y-mazapan" target="_blank">Leer mas</a>
+                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/museo-artesanal-del-turron-mantecado-y-mazapan" target="_blank">Show more</a>
                         </div>
 
                     </div>
@@ -160,7 +160,7 @@
 
                         <div class="container">
                             <h4>Centuries ago, our town was known for its famous hams, as quoted by Miguel de Cervantes in two of his universal exemplary novels</h4>
-                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/casa-museo-del-jamon" target="_blank">Leer mas</a>
+                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/casa-museo-del-jamon" target="_blank">Show more</a>
                         </div>
 
                     </div>
@@ -172,7 +172,7 @@
 
                         <div class="container">
                             <h4>In its showcases appears the history of more than a hundred distilleries dedicated to bullfighters, literary characters and animals.</h4>
-                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/museo-del-anis" target="_blank">Leer mas</a>
+                            <a class="enlacE" href="https://turismodelasubbetica.es/rute/item/museo-del-anis" target="_blank">Show more</a>
                         </div>
 
                     </div>
